up source interface

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/DrawGraphics.java=UTF-8
+encoding//src/main/GraphDraw.java=UTF-8
 encoding//src/main/Main.java=UTF-8
+encoding//src/main/Node.java=UTF-8
+encoding//src/main/Vertex.java=UTF-8
